MYPLAN-1755 Fixed 1 year plan long course with sections wrap.

--- a/myplan-web/src/main/webapp/ks-myplan/css/myplan.css
+++ b/myplan-web/src/main/webapp/ks-myplan/css/myplan.css
@@ -1018,7 +1018,6 @@ input.myplan-delete:hover,
 
 .myplan-carousel-list ul li .myplan-carousel-term .uif-stackedCollectionLayout .uif-collectionItem .credit {
     color: #888;
-    margin-left: 5px;
 }
 
 .myplan-carousel-list ul li .myplan-carousel-term .uif-stackedCollectionLayout .uif-collectionItem .grade {
